Added ServiceBusHandler and tests for it

--- a/src/TaskManagementSystem.API/appsettings.json
+++ b/src/TaskManagementSystem.API/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest",
+    "QueueName": "recieve-message-q",
+    "RetryCount":  2
+  }
 }
