--- a/src/TaskManagementSystem.Application/TaskManagementSystem.Application.csproj
+++ b/src/TaskManagementSystem.Application/TaskManagementSystem.Application.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Resilience" Version="8.10.0" />
   </ItemGroup>
 
   <ItemGroup>
